Add principal image

--- a/index.html
+++ b/index.html
@@ -3,21 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet assos</title>
+    <title>Nom association</title>
     
 </head>
+
 <body>
     <header>
-        <h1>Projet assos</h1>
+        <h1>Nom de l'association</h1>
+        <strong>slogan de l'association</strong>
         <nav>
-
+            <ul>
+                <li><a href="#">menu 1</a></li>
+                <li><a href="#">menu 2</a></li>
+                <li><a href="#">menu 3</a></li>
+                <li><a href="#">menu 4</a></li>
+            </ul>
         </nav>
+
+        <ul id="breadcrumb">
+            <li><a href="">Lorem ipsum</a></li>
+            <li><a href="">Vivamus nisi eros</a></li>
+            <li><a href="">Nulla sed lorem risus</a></li>
+            <li><a href="">Nam iaculis commodo</a></li>
+            <li><a href="" class="current">Current crumb</a></li>
+        </ul>
+
     </header>
-    <main>
 
-    </main>
+    <content>
+
+        <main>
+            <img src="Images/160211_bq4fr_lc-animaux_chien_chat_sn635.jpeg" alt="Image montrant plusieurs chiens et chats alignés">
+            <h2>Qui sommes-nous ?</h2>
+            <p>Description de l'association, son histoire, son ambition, quelques chiffres ?</p>
+        <article>
+            <h2>Le dernier evenement en date</h2>
+            <p>Description et résumé du dernier evenement de l'association, ses resultats, quelques photos ?</p>
+        </article>
+        </main>
+        <aside>
+            <H2>Ou nous trouvez ?</H2>
+            <article>Adresse des differentes presences ...</article>
+        </aside>
+    </content>
     <footer>
-
+        <p>Faire un don</p>
+        <ul>
+            <li>Contact</li>
+            <li>plan du site</li>
+            <li>mentions legales</li>
+        </ul>
     </footer>
 </body>
 </html>
