--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <img src="/Images/chatons.jpeg">
+                <article class="give-donation">
+                    <img
+                    src="Images/chatons.jpeg" 
+                    alt="Deux chatons gris"/>
+                </article>
             </div>
             <div class="row">
-                <article class="whoweare">
+                <article class="who-we-are">
                     <h2 class="h5">Qui sommes nous ?</h2>
                     <p>La Société protectrice des animaux (SPA) est, historiquement en France, la première des sociétés de protection des animaux, 
                     qui œuvre dans le domaine de la protection animale.<div class="suite-1"><a href="#">Lire la suite</a></div></a></p>
