--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Secours des Animaux en Détresse</title>
 </head>
 <body>
     <header>
         <div class="container-fluid">
             <div class="row title">
                 <div class="col">
-                    <a href="#"><h1 class="h6">Secour des Animaux en Detresse</h1></a>
+                    <a href="#"><h1 class="h6">Secours des Animaux en Détresse</h1></a>
                 </div>
             </div>
             <div class="row align-items-end menu">
                 <div class="col">
                     <div class="d-flex justify-content-between">
-                        <a href="#"><svg class="menu-icon" width="1em" height="40px" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <a href="#"><svg class="menu-icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 
                             1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                         </svg></a>
@@ -35,18 +35,44 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <article class="give-donation">
-                    <img
-                    src="Images/chatons.jpeg" 
-                    alt="Deux chatons gris"/>
-                </article>
+                <div class="col">
+                    <article class="give-donation">
+                        <img
+                        src="Images/chaton-rencontre-chat.jpeg" 
+                        alt="Deux chatons gris"/>
+                        <div class="donation-text">
+                            <h3 class="h5">Soutenez-nous !<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-gear-wide-connected fa-2x iconCare" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8.932.727c-.243-.97-1.62-.97-1.864 0l-.071.286a.96.96 0 0 1-1.622.434l-.205-.211c-.695-.719-1.888-.03-1.613.931l.08.284a.96.96 0 0 1-1.186 1.187l-.284-.081c-.96-.275-1.65.918-.931 1.613l.211.205a.96.96 0 0 1-.434 1.622l-.286.071c-.97.243-.97 1.62 0 1.864l.286.071a.96.96 0 0 1 .434 1.622l-.211.205c-.719.695-.03 1.888.931 1.613l.284-.08a.96.96 0 0 1 1.187 1.187l-.081.283c-.275.96.918 1.65 1.613.931l.205-.211a.96.96 0 0 1 1.622.434l.071.286c.243.97 1.62.97 1.864 0l.071-.286a.96.96 0 0 1 1.622-.434l.205.211c.695.719 1.888.03 1.613-.931l-.08-.284a.96.96 0 0 1 1.187-1.187l.283.081c.96.275 1.65-.918.931-1.613l-.211-.205a.96.96 0 0 1 .434-1.622l.286-.071c.97-.243.97-1.62 0-1.864l-.286-.071a.96.96 0 0 1-.434-1.622l.211-.205c.719-.695.03-1.888-.931-1.613l-.284.08a.96.96 0 0 1-1.187-1.186l.081-.284c.275-.96-.918-1.65-1.613-.931l-.205.211a.96.96 0 0 1-1.622-.434L8.932.727zM8 12.997a4.998 4.998 0 1 0 0-9.995 4.998 4.998 0 0 0 0 9.996z"/>
+                                <path fill-rule="evenodd" d="M7.375 8L4.602 4.302l.8-.6L8.25 7.5h4.748v1H8.25L5.4 12.298l-.8-.6L7.376 8z"/>
+                              </svg></h3>
+                            
+                            <p>Vous souhaitez faire un don ? <br>rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" 
+                                fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
+                                0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>;
+                              </svg></a></p>
+                            <p>Vous souhaitez rejoindre l'une de nos équipes ? <br>c'est par là !<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
+                                fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
+                                0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>
+                              </svg></a></p>
+                        </div>
+                    </article>
+                </div>
             </div>
             <div class="row">
-                <article class="who-we-are">
-                    <h2 class="h5">Qui sommes nous ?</h2>
-                    <p>La Société protectrice des animaux (SPA) est, historiquement en France, la première des sociétés de protection des animaux, 
-                    qui œuvre dans le domaine de la protection animale.<div class="suite-1"><a href="#">Lire la suite</a></div></a></p>
-                </article>
+                <div class="col">
+                    <article class="who-we-are">
+                        <h2 class="h5">Qui sommes nous ?<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-info-circle-fill iconInfo" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 
+                            3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 
+                            6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                          </svg></h2>
+
+                        <p>La Société protectrice des animaux (SPA) est, historiquement en France, la première des sociétés de protection des animaux, 
+                        qui œuvre dans le domaine de la protection animale.<div class="suite-1"><a href="#"><i>Lire la suite</i></a></div></a></p>
+                    </article>
+                </div>
             </div>
         </div>
     </main>
