improve generale style, add event artcile

--- a/index.html
+++ b/index.html
@@ -45,21 +45,23 @@
                                 <path fill-rule="evenodd" d="M8.932.727c-.243-.97-1.62-.97-1.864 0l-.071.286a.96.96 0 0 1-1.622.434l-.205-.211c-.695-.719-1.888-.03-1.613.931l.08.284a.96.96 0 0 1-1.186 1.187l-.284-.081c-.96-.275-1.65.918-.931 1.613l.211.205a.96.96 0 0 1-.434 1.622l-.286.071c-.97.243-.97 1.62 0 1.864l.286.071a.96.96 0 0 1 .434 1.622l-.211.205c-.719.695-.03 1.888.931 1.613l.284-.08a.96.96 0 0 1 1.187 1.187l-.081.283c-.275.96.918 1.65 1.613.931l.205-.211a.96.96 0 0 1 1.622.434l.071.286c.243.97 1.62.97 1.864 0l.071-.286a.96.96 0 0 1 1.622-.434l.205.211c.695.719 1.888.03 1.613-.931l-.08-.284a.96.96 0 0 1 1.187-1.187l.283.081c.96.275 1.65-.918.931-1.613l-.211-.205a.96.96 0 0 1 .434-1.622l.286-.071c.97-.243.97-1.62 0-1.864l-.286-.071a.96.96 0 0 1-.434-1.622l.211-.205c.719-.695.03-1.888-.931-1.613l-.284.08a.96.96 0 0 1-1.187-1.186l.081-.284c.275-.96-.918-1.65-1.613-.931l-.205.211a.96.96 0 0 1-1.622-.434L8.932.727zM8 12.997a4.998 4.998 0 1 0 0-9.995 4.998 4.998 0 0 0 0 9.996z"/>
                                 <path fill-rule="evenodd" d="M7.375 8L4.602 4.302l.8-.6L8.25 7.5h4.748v1H8.25L5.4 12.298l-.8-.6L7.376 8z"/>
                               </svg></h3>
-                            
-                            <p>Vous souhaitez faire un don ? <br>rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" 
-                                fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
-                                0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>;
-                              </svg></a></p>
-                            <p>Vous souhaitez rejoindre l'une de nos équipes ? <br>c'est par là !<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
-                                fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
-                                0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>
-                              </svg></a></p>
+                            <div class="content-donation">
+                                <p>Vous souhaitez faire un <strong>don</strong> ? <br>rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
+                                    fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
+                                    0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>;
+                                  </svg></a></p>
+                                <p>Vous souhaitez <strong>rejoindre</strong> l'une de nos équipes ? <br>c'est par là !<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
+                                    fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-11.5.5a.5.5 0 0 1 
+                                    0-1h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5z"/>
+                                  </svg></a></p>
+                            </div>
                         </div>
                     </article>
                 </div>
             </div>
+            <div class="border-separator-2"></div>
             <div class="row">
                 <div class="col">
                     <article class="who-we-are">
@@ -71,6 +73,14 @@
 
                         <p>La Société protectrice des animaux (SPA) est, historiquement en France, la première des sociétés de protection des animaux, 
                         qui œuvre dans le domaine de la protection animale.<div class="suite-1"><a href="#"><i>Lire la suite</i></a></div></a></p>
+                    </article>
+                </div>
+            </div>
+            <div class="border-separator-2"></div>
+            <div class="row">
+                <div class="col">
+                    <article class="event">
+                        <h2 class="h5">Decouvrez nos prochains évenements !</h2>
                     </article>
                 </div>
             </div>
