Change header, implement search bar and menu items

--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row title">
-                <div class="col">
+        <div class="container-fluid header-container">
+            <div class="row header ">
+                <div class="col d-flex justify-content-start title">
                     <a href="#"><h1 class="h6">Secours des Animaux en Détresse</h1></a>
+                    <a href="#"><h2 class="h6 abbrv">S.A.D<br>association</h2></a>
                 </div>
-            </div>
-            <div class="row align-items-end menu">
-                <div class="col">
-                    <div class="d-flex justify-content-between">
-                        <a href="#"><svg class="menu-icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 
-                            1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                        </svg></a>
-                        <a href="#"><svg class="search-icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <div class="col d-flex justify-content-end menu">
+                      <form class="d-flex search-menu">
+                        <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
+                        <button class="search-button" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
                             <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                        </svg></a>
-                    </div>
+                          </svg></button>
+                      </form>
+                      <div class="navig">
+                          <ul class="li"><a href="#">Accueil</a></ul>
+                          <ul class="li"><a href="#">Evenements</a></ul>
+                          <ul class="li"><a href="#">Galerie</a></ul>
+                          <ul class="li"><a href="#">contact</a></ul>
+                      </div>
                 </div>
             </div>
         </div>
-        <div class="border-separator"></div>
     </header>
     <main>
         <div class="container-fluid">
