add responsive menu

--- a/index.html
+++ b/index.html
@@ -13,22 +13,37 @@
             <div class="row header ">
                 <div class="col d-flex justify-content-start title">
                     <a href="#"><h1 class="h6">Secours des Animaux en Détresse</h1></a>
-                    <a href="#"><h2 class="h6 abbrv">S.A.D<br>association</h2></a>
                 </div>
                 <div class="col d-flex justify-content-end menu">
-                      <form class="d-flex search-menu">
+                    <form class="d-flex search-menu">
                         <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
                         <button class="search-button" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                          </svg></button>
-                      </form>
-                      <div class="navig">
-                          <ul class="li"><a href="#">Accueil</a></ul>
-                          <ul class="li"><a href="#">Evenements</a></ul>
-                          <ul class="li"><a href="#">Galerie</a></ul>
-                          <ul class="li"><a href="#">contact</a></ul>
-                      </div>
+                            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/></svg>
+                        </button>
+                    </form>
+                    <div class="navig">
+                        <ul>
+                              <li><a href="#">Accueil</a></li>
+                              <li><a href="#">Galerie</a></li>
+                              <li><a href="#">Evenements</a></li>
+                              <li><a href="#">contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row menu2">
+                    <div class="col wrap-col">
+                        <ul id="wrapper">
+                            <li><a href="#">Menu</a>
+                                <ul>
+                                    <li><a href="#">Accueil</a></li>
+                                    <li><a href="#">Galerie</a></li>
+                                    <li><a href="#">Evenements</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
