--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </form>
                         <div class="navig">
                             <ul>
-                                <li><a href="#">Accueil</a></li>
+                                <li><a href="index.html">Accueil</a></li>
                                 <li><a href="#">Galerie</a></li>
                                 <li><a href="#">Actus</a></li>
                                 <li><a href="#">contact</a></li>
@@ -114,7 +114,7 @@
         <div class="border-separator-2"></div>
         <footer>
             <div class="container-fluid footer-1">
-                <div class="row justify-content-between">
+                <div class="row justify-content-between row-footer">
                     <div class="col logo">
                         <p>Secours des animaux en détresse</p>
                     </div>
@@ -137,7 +137,19 @@
                 <div class="row">
                     <div class="col footer">
                         <div class="foot-page">
-
+                            <ul class="mention">
+                                <li><a href="#">Mentions légales</a></li>
+                                <span class="separator">|</span>
+                                <li><a href="#">Plan du site</a></li>
+                                <span class="separator">|</span>
+                                <li><a href="#">Presse</a></li>
+                                <span class="separator">|</span>
+                                <li><a href="#">Appels d'offres</a></li>
+                                <span class="separator">|</span>
+                                <li><a href="#">Actions</a></li>
+                                <span class="separator">|</span>
+                                <li><a href="#">Contacts</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
