add 4 event cards

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link rel="stylesheet" href="footer.css">
         <link rel="stylesheet" href="style.css">
         <title>Secours des Animaux en Détresse</title>
     </head>
@@ -26,7 +27,7 @@
                             <ul>
                                 <li><a href="index.html">Accueil</a></li>
                                 <li><a href="#">Galerie</a></li>
-                                <li><a href="#">Actus</a></li>
+                                <li><a href="event.html">Evenements</a></li>
                                 <li><a href="#">contact</a></li>
                             </ul>
                         </div>
@@ -83,7 +84,7 @@
                                 <img src="../Project-1/Images/Illustration_sans_titre(1).png" alt="dessin de chien">
                             </div>
                             <p>La Société protectrice des animaux (SPA) est, historiquement en France, la première des sociétés de protection des animaux, 
-                            qui œuvre dans le domaine de la protection animale.<div class="suite-1"><a href="#"><i>Lire la suite</i></a></div></p>
+                            qui œuvre dans le domaine de la protection animale [...]<div class="suite-1"><a href="#"><i>Lire la suite</i></a></div></p>
                         </article>
                     </div>
                 </div>
@@ -92,7 +93,7 @@
                     <div class="col event-col">
                         <article class="event">
                             <h2 class="h5"><a href="#">Je participe !</a></h2>
-                            <p><strong>Spectacle, conférérence, débat, marathon, tombola</strong>...<br>retrouvez-nous partout en France</p>
+                            <p><strong>Spectacles, conférérences, débats, marathons, tombolas</strong>...<br>retrouvez-nous partout en France</p>
                             <img src="../Project-1/Images/cover-r4x3w1000-5ef9cf64b2914-dog-813103-1920.jpg">
                         </article>
                     </div>
@@ -100,7 +101,7 @@
                 <div class="border-separator-2"></div>
                 <div class="row">
                     <div class="col newsletter">
-                        <h3 class="h5">Inscrivez-vous a notre newsletter</h3>
+                        <h3 class="h5">Inscrivez-vous à notre newsletter</h3>
                         <input type="email" placeholder="e-mail">
                         <a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
                             fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
@@ -164,9 +165,9 @@
                                 <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
                             </svg></a>
                                 <ul>
-                                    <li><a href="#">Accueil</a></li>
+                                    <li><a href="index.html">Accueil</a></li>
                                     <li><a href="#">Galerie</a></li>
-                                    <li><a href="#">Actus</a></li>
+                                    <li><a href="event.html">Evenements</a></li>
                                     <li><a href="#">Contact</a></li>
                                 </ul>
                             </li>
