make responsive format

--- a/event.html
+++ b/event.html
@@ -48,9 +48,10 @@
                             <div class="card">
                                 <img src="../Project-1/Images/animals-in-communities.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Action de sauvetage</h5>
+                                    <h5 class="card-title">Action sauvetage</h5>
                                     <datetime>05/01/2021</datetime>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <p class="card-text"><h6>Toulouse</h6>A travers les rues de Toulouse, nous partirons aux secours des animaux érrants. Notre objectif ? 
+                                    Leur offrir une vie meilleure</p>
                                     <a href="#" class="btn btn-danger">Participer</a>
                                 </div>
                             </div>
@@ -58,9 +59,10 @@
                             <div class="card">
                                 <img src="../Project-1/Images/world-animal-protection-office.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Portes ouvertes</h5>
                                   <datetime>05/01/2021</datetime>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <p class="card-text"><h6>Paris</h6>Au sein de nos locaux, nous organisons une journée porte ouverte afin de faire adopter un maximum de nos pensionnaires. 
+                                Leur trouver une nouvelle famille sera l'ojectif de cette journée.</p>
                                   <a href="#" class="btn btn-danger">Participer</a>
                                 </div>
                             </div>
@@ -68,9 +70,9 @@
                             <div class="card">
                                 <img src="../Project-1/Images/conference.JPG" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Conférence-débat</h5>
                                   <datetime>05/01/2021</datetime>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <p class="card-text"><h6>Rouen</h6>Comment améliorer la protection des animaux ? Nous proposons cette conférence-débat afin de trouver les meilleures réponses.</p>
                                   <a href="#" class="btn btn-danger">Participer</a>
                                 </div>
                             </div>
@@ -78,9 +80,10 @@
                             <div class="card">
                                 <img src="../Project-1/Images/marathon.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Marathon</h5>
                                   <datetime>05/01/2021</datetime>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <p class="card-text"><h6>Marseille</h6>En partant de la Cannebière, une course de 30km dans les rues de Marseille, des centaines de participants chaques année, saurez-vous 
+                                relever le défis ? les bénéfices iront à la cause animale</p>
                                   <a href="#" class="btn btn-danger">Participer</a>
                                 </div>
                             </div>
