--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="footer.css">
         <link rel="stylesheet" href="style.css">
         <title>Secours des Animaux en Détresse</title>
     </head>
@@ -37,7 +36,7 @@
         </header>
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Accueil</li>
             </ol>
         </nav>
         <main>
@@ -120,10 +119,8 @@
         <footer>
             <div class="container-fluid footer-1">
                 <div class="row justify-content-between row-footer-1">
-                    <div class="col logo">
-                        <p>Secours des animaux en détresse</p>
-                    </div>
-                    <div class="col social align-self-center">
+                    <div class="col">
+                    <div class="social">
                         <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 
                         1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
@@ -139,6 +136,7 @@
                         </svg></a>
                     </div>
                 </div>
+            </div>
                 <div class="row row-footer-2">
                     <div class="col footer">
                         <div class="foot-page">
